# Voting-app

./: Dockerfile  Makefile  README.md  config.py  docker-compose.yml  docker-composer.yml  logger.py  main.py  pyproject.toml  requirements.txt
db/: DBModels.py  DbConfig.py
utils/: constants.py  security.py
v1/users/: UserDBModels.py  UserEndpoints.py  UserSchemas.py
